[package]
name = "async-openssl"
version = "0.0.0"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
repository = "https://github.com/amqp-rs/async-openssl"
description = """
An implementation of SSL streams for async IO backed by OpenSSL
"""

[dependencies]
futures-io = "^0.3"
openssl = "^0.10.72"
openssl-sys = "^0.9"

[dev-dependencies]
smol = "^2.0"

[dev-dependencies.futures-util]
version = "^0.3"
default-features = false
