[package]
name = "async-openssl"
version = "0.2.1"
edition = "2024"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Marc-Antoine Perennou <Marc-Antoine@Perennou.com>"]
description = "An implementation of SSL streams for async IO backed by OpenSSL"
repository = "https://github.com/amqp-rs/async-openssl"
readme = "README.md"
documentation = "https://docs.rs/async-openssl"
keywords = ["crypto", "tls", "ssl", "dtls"]
categories = ["asynchronous", "cryptography", "network-programming"]
license = "MIT/Apache-2.0"
rust-version = "1.85.0"

[dependencies]
futures-io = "^0.3"
openssl = "^0.10.72"
openssl-sys = "^0.9"

[dev-dependencies]
smol = "^2.0"

[dev-dependencies.futures-util]
version = "^0.3"
default-features = false
